--- a/FilmIHM/index.html
+++ b/FilmIHM/index.html
@@ -19,7 +19,28 @@
             $("#contentPage").html(data);
           },"html");
         }
+
+      function getCookie(cname) {
+          var name = cname + "=";
+          var ca = document.cookie.split(';');
+          for(var i = 0; i <ca.length; i++) {
+              var c = ca[i];
+              while (c.charAt(0)==' ') {
+                  c = c.substring(1);
+              }
+              if (c.indexOf(name) == 0) {
+                  return c.substring(name.length,c.length);
+              }
+          }
+          return "";
+      } 
     </script>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="css/jquery.rateyo.min.css">
+
+    <script src="js/vendor/jquery.js"></script>
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="js/jquery.rateyo.min.js"></script>
   </head>
   <body>
     <style>
@@ -32,8 +53,8 @@
       <button class="menu-icon" type="button" data-toggle></button>
       <div class="title-bar-title">Menu</div>
       <span>
-        <input placeholder='Rechercher un film ...'>
-        <button type='submit' value='Go' class='button'>Go</button>
+        <input class='rechercherFilm' placeholder='Rechercher un film ...'>
+        <button type='submit' value='Go' class='button buttonRechercheFilm'>Go</button>
       </span>
     </div>
 
@@ -43,8 +64,8 @@
           <li id='acc' class="menu-text">RFS</li>
           <li>
             <div class='noneOnMenu'>
-              <input placeholder='Rechercher un film ...' >
-              <button type='submit' value='Go' class='button'>Go</button>
+              <input class='rechercherFilm' placeholder='Rechercher un film ...' >
+              <button type='submit' value='Go' class='button buttonRechercheFilm'>Go</button>
             </div>
           </li>
         </ul>
@@ -68,7 +89,6 @@
 
 
 
-    <script src="js/vendor/jquery.js"></script>
     <script src="js/vendor/what-input.js"></script>
     <script src="js/vendor/foundation.js"></script>
     <script src="js/foundation-datepicker.min.js"></script>
@@ -141,6 +161,11 @@
               loadPage("welcome");
             break;
           }
+        });
+
+        $(".buttonRechercheFilm").click(function(){
+          location.href = "#All?q="+$(this).parent().find(".rechercherFilm").val();
+          //alert('recherche de '+$(this).parent().find(".rechercherFilm").val());
         });
 
       });
