--- a/FilmIHM/pages/addFilm.html
+++ b/FilmIHM/pages/addFilm.html
@@ -10,7 +10,7 @@ description:
 -->
 
 
-<div class='row' style='margin:0 5em'>
+<div class='row' style='margin: 0 auto;'>
 	<h1>Ajoutez un film</h1>
 
 	<form>
@@ -86,24 +86,13 @@ description:
 		});
 
 		$("#addFilm").click(function(){
-			/*
-			{
-		      name : "Star Wars IV : Un nouvel espoir",
-		      date : "1977",
-		      duree : "2h01m",
-		      genre : ["SF"],
-		      realisateur : "George Lucas",
-		      acteurs : ["Mark Hamill", "Harrison Ford", "Carrie Fisher"],
-		      description:"Il y a bien longtemps, dans une galaxie très lointaine... La guerre civile fait rage entre l'Empire galactique et l'Alliance rebelle. Capturée par les troupes de choc de l'Empereur menées par le sombre et impitoyable Dark Vador, la princesse Leia Organa dissimule les plans de l'Etoile Noire, une station spatiale invulnérable, à son droïde R2-D2 avec pour mission de les remettre au Jedi Obi-Wan Kenobi. Accompagné de son fidèle compagnon, le droïde de protocole C-3PO, R2-D2 s'échoue sur la planète Tatooine et termine sa quête chez le jeune Luke Skywalker. Rêvant de devenir pilote mais confiné aux travaux de la ferme, ce dernier se lance à la recherche de ce mystérieux Obi-Wan Kenobi, devenu ermite au coeur des montagnes désertiques de Tatooine... ",
-		      note : "5"
-		    }
-			*/
 			var newFilm = {};
+			newFilm.id = "c1";
 			newFilm.name = $("#film_name").val();
 			newFilm.date = $("#film_dateSortie").val();
 			newFilm.duree = $("#film_duree").val();
-			newFilm.genre = [];
-			newFilm.genre[0] = $("#film_genre").val();
+			newFilm.genres = [];
+			newFilm.genres[0] = $("#film_genre").val();
 			newFilm.realisateur = $("#film_real").val();
 			newFilm.acteurs = [];
 			newFilm.acteurs[0] = $("#film_actor").val();
@@ -112,6 +101,8 @@ description:
 			document.cookie = "films = ["+JSON.stringify(newFilm)+"];expires=Thu,4 Dec 2018 23:59:59 GMT";
 			//alert(document.cookie);
 			//console.log();
+
+			location.href='#detail?id=c1';
 		});
 	});
 </script>
