--- a/FilmIHM/pages/listFilms.html
+++ b/FilmIHM/pages/listFilms.html
@@ -1,24 +1,3 @@
-<style>
-	.film{
-		border-bottom: 1px dotted #CCC;
-		margin-bottom:5px;
-		min-height:240px;
-	}
-
-	.film .large-6 img{
-		width:50%;
-		height:auto;
-	}
-
-	.detail{
-		cursor:pointer;
-	}
-	.detailFILM div{
-		margin-top:5px;
-	}
-</style>
-
-
 <div class='row'>
 	<div style='text-align:center;margin-bottom:25px;'>
 		<h1>Tous nos films</h1>
@@ -82,6 +61,9 @@
 		var htmlToAppend="";
 		htmlToAppend+="<div href='#detail?id="+film.id+"' class='film large-6 columns detail'>";
 			htmlToAppend+="<div class='large-6 small-6 columns'>";
+				if(film.image === undefined){
+					film.image="default.jpg";
+				}
 				htmlToAppend+="<img src='images/"+film.image+"'/>";
 			htmlToAppend+="</div>";
 			htmlToAppend+="<div class='large-6 small-6 columns'>"
@@ -107,6 +89,10 @@
 	});
 	$("#film").append("<div style='clear:both'></div>");
 
+
+		if($(".film").length <=0){
+			$("#film").append("<div style='font-size:25px;font-weight:bold;'>Aucun résultat de films pour votre recherche ...</div>");
+		}
 	});
 
 
