titre ajout commentaire

--- a/FilmIHM/pages/ficheFilm.html
+++ b/FilmIHM/pages/ficheFilm.html
@@ -3,6 +3,7 @@
 </div>
 <div class='row'>
 	<div class='row' style='background-color:#CCC;margin:2em;padding:2em'>
+		<h4>Ajoutez votre commentaire ! </h4>
 		<input id='pseudo' class='large-2 columns' placeholder='pseudo' />
 		<div class='large-12 columns'>&nbsp;</div>
 		<textarea rows="4" id='comment' class='large-8 columns' placeholder='ajoutez un commentaire'></textarea>
